--- a/assets/typographys.css
+++ b/assets/typographys.css
@@ -138,34 +138,125 @@ button:hover, .btn-secondary:hover {
 }
 @media (min-width: 1200px) {
   h1 {
-    font-size: 2.08vw;
+    font-size: 2.5vw;
   }
 
   h2 {
-    font-size: 1.2vw;
+    font-size: 2vw;
     margin-bottom: 10%;
   }
 
   h3 {
-    font-size: 1.3vw;
+    font-size: 1.4vw;
   }
 
   a {
-    font-size: 0.83vw;
+    font-size: 1vw;
   }
 
   p {
-    font-size: 0.83vw;
+    font-size: 1.2vw;
   }
 
   li {
-    font-size: 1.3vw;
+    font-size: 1vw;
   }
 
   button, .btn-secondary {
-    font-size: 0.72vw;
+    font-size: 1vw;
   }
 }
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
 /*# sourceMappingURL=typographys.css.map */
 /*# sourceMappingURL=typographys.css.map */
 /*# sourceMappingURL=typographys.css.map */
