--- a/assets/style.scss
+++ b/assets/style.scss
@@ -107,7 +107,7 @@ section {
 
 .services-icon {
   border-radius: 100px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
   height: auto;
   width: max-content;
   padding: 40px;
