Pagrindinio headerio fixai.

--- a/assets/header.scss
+++ b/assets/header.scss
@@ -14,7 +14,7 @@
 
 .header {
 
-  background-image: url("../images/(flip)shutterstock_1455340826 1.png");
+  background-image: url("../images/header-2.jpg");
   background-position: center;
   width: 100%;
 
