--- a/assets/style.css
+++ b/assets/style.css
@@ -6,25 +6,21 @@
 .bg-primary.header {
   margin-top: 0;
 }
-
 .bg-primary.header div {
   padding: 156px 0 100px;
 }
 
 .header {
-  background-image: url("../images/(flip)shutterstock_1455340826 1.png");
+  background-image: url("../images/header-2.jpg");
   background-position: center;
   width: 100%;
 }
-
 .header video {
   width: 100%;
 }
-
 .header i {
   font-size: 100px;
 }
-
 .header i #text {
   display: none;
 }
@@ -43,7 +39,6 @@
     color: #4F4F4F;
     transition: 0.2s;
   }
-
   .navbar-dark .navbar-nav .nav-link:hover {
     color: #20A2EC;
     cursor: pointer;
@@ -55,6 +50,11 @@
 }
 * {
   font-family: Roboto, sans-serif;
+}
+
+.btn-primary {
+  background-color: #20A2EC;
+  border-color: #20A2EC;
 }
 
 h1 {
@@ -119,7 +119,6 @@ button, .btn-secondary {
   line-height: 16px;
   transition: 0.2s;
 }
-
 button:hover, .btn-secondary:hover {
   border-color: #F2F2F2;
   color: #20A2EC;
@@ -262,7 +261,6 @@ section ul {
   padding-left: 0;
   text-align: left;
 }
-
 section ul li:before {
   font-family: "Font Awesome 5 Free";
   display: inline-block;
@@ -272,7 +270,6 @@ section ul li:before {
   color: #20A2EC;
   content: "";
 }
-
 section .bg-primary li:before {
   color: #fff;
 }
@@ -281,7 +278,6 @@ section .bg-primary li:before {
   background-color: #20A2EC;
   color: #fff;
 }
-
 .btn button:hover {
   background-color: #fff;
   color: #20A2EC;
@@ -291,20 +287,16 @@ section .bg-primary li:before {
   padding-right: 25%;
   color: #20A2EC;
 }
-
 #about .show i:before {
   color: #086295;
 }
-
 #about .dropdown-item {
   color: #20A2EC;
 }
-
 #about .dropdown-item:hover {
   background-color: #20A2EC;
   color: #fff;
 }
-
 #about .dropdown-item:hover i {
   color: #fff;
 }
@@ -318,7 +310,6 @@ section .bg-primary li:before {
   margin: auto;
   margin-bottom: 50px;
 }
-
 .services-icon img {
   width: auto;
 }
@@ -332,7 +323,6 @@ section .bg-primary li:before {
   top: -100px;
   margin-bottom: 40px;
 }
-
 .case-study h1 {
   font-size: 80px;
   color: #1483C1;
@@ -342,31 +332,25 @@ section .bg-primary li:before {
 #services .container-fluid {
   text-align: center;
 }
-
 #services .container-fluid button, #services .container-fluid .btn-secondary {
   transition: 0.2s;
 }
-
 #services .container-fluid button:hover, #services .container-fluid .btn-secondary:hover {
   background-color: #fff;
   color: #20A2EC;
   border: 2px solid #fff;
 }
-
 #services .container-fluid a {
   color: #fff;
   cursor: pointer;
   text-decoration: none;
 }
-
 #services .container-fluid i {
   margin-left: 15px;
 }
-
 #services .container-fluid .buttons {
   margin-bottom: 50px;
 }
-
 #services .container-fluid .buttons button {
   margin-bottom: 25px;
 }
@@ -374,7 +358,6 @@ section .bg-primary li:before {
 #functions p {
   color: #20A2EC;
 }
-
 #functions li {
   font-weight: 300;
 }
@@ -392,20 +375,17 @@ section .bg-primary li:before {
   padding: 10px;
   text-transform: uppercase;
 }
-
 .footer .footer-info {
   background-image: url("../images/dialog-01.png");
   background-repeat: no-repeat, repeat;
   background-position: center;
 }
-
 .footer h3 {
   padding: 60px 0;
   margin: 60px 0;
   color: #20A2EC;
   text-transform: uppercase;
 }
-
 .footer a {
   line-height: 40px;
   text-decoration: none;
@@ -427,7 +407,6 @@ section .bg-primary li:before {
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
 }
-
 .nav-cities a {
   transition: 0.2s;
   color: #fff;
@@ -436,11 +415,9 @@ section .bg-primary li:before {
   border-bottom: 2px solid #fff;
   text-decoration: none;
 }
-
 .nav-cities a:last-child {
   border-bottom: unset;
 }
-
 .nav-cities a:hover {
   padding: 20px 10px;
 }
@@ -463,7 +440,6 @@ section .bg-primary li:before {
   color: #20A2EC;
   content: "";
 }
-
 .duk-list li p {
   color: #828282;
 }
@@ -471,17 +447,16 @@ section .bg-primary li:before {
 .duk-list-item {
   border-bottom: 2px solid #F2F2F2;
 }
-
 @media (min-width: 768px) {
   .duk-list-item h3 {
     font-size: 2vw;
     font-weight: 500;
   }
-
   .duk-list-item p {
     font-size: 1.8vw;
   }
 }
+
 .list-group p {
   font-weight: 400;
 }
@@ -489,7 +464,6 @@ section .bg-primary li:before {
 .bg-white {
   color: #4F4F4F;
 }
-
 .bg-white li:before {
   color: #20A2EC;
 }
@@ -501,20 +475,16 @@ section .bg-primary li:before {
   background-repeat: repeat-x;
   background-size: auto 100%;
 }
-
 .articles h1 {
   color: #20A2EC;
 }
-
 .articles img {
   width: 30%;
   height: auto;
 }
-
 .articles p {
   color: #4F4F4F;
 }
-
 .articles .bg-info {
   background-color: #fff !important;
   border-radius: 20px;
@@ -529,25 +499,20 @@ section .bg-primary li:before {
   color: #fff;
   border-radius: 0;
 }
-
 .popover .popover-header {
   background-color: #20A2EC;
   border-bottom: unset;
 }
-
 .popover .popover-body {
   color: #fff;
 }
-
 .popover .arrow {
   left: 50%;
 }
-
 .popover .arrow:before {
   border-bottom-color: #20A2EC;
   border-top-color: #20A2EC;
 }
-
 .popover .arrow:after {
   border-bottom-color: #20A2EC;
   border-top-color: #20A2EC;
@@ -612,7 +577,6 @@ button .border-primary:hover {
 #navbarResponsive a {
   color: #4F4F4F;
 }
-
 #navbarResponsive a:hover {
   color: #20A2EC;
 }
@@ -642,110 +606,5 @@ button .border-primary:hover {
   margin-top: 90px;
   margin-bottom: 90px;
 }
-
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
-/*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=style.css.map */
