--- a/assets/header.scss
+++ b/assets/header.scss
@@ -13,7 +13,6 @@
 }
 
 .header {
-
   background-image: url("../images/header-1.jpg");
   background-position: center;
   width: 100%;
@@ -29,6 +28,12 @@
   i #text {
     display: none;
   }
+}
+
+.header-mobile {
+  background-image: url("../images/header-3.jpg");
+  background-position: center;
+  width: 100%;
 }
 
 
