--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,12 @@
   display: none;
 }
 
+.header-mobile {
+  background-image: url("../images/header-3.jpg");
+  background-position: center;
+  width: 100%;
+}
+
 .bg-dark {
   background-color: #fff !important;
 }
