--- a/assets/typographys.css
+++ b/assets/typographys.css
@@ -2,6 +2,10 @@
   font-family: Roboto, sans-serif;
 }
 
+.primary-color {
+  color: #20A2EC;
+}
+
 .btn-primary {
   background-color: #20A2EC;
   border-color: #20A2EC;
@@ -69,10 +73,11 @@ button, .btn-secondary {
   line-height: 16px;
   transition: 0.2s;
 }
+
 button:hover, .btn-secondary:hover {
+  background-color: transparent;
   border-color: #F2F2F2;
   color: #20A2EC;
-  background-color: #F2F2F2;
 }
 
 .btn-secondary:hover {
@@ -156,20 +161,357 @@ button:hover, .btn-secondary:hover {
   }
 
   a {
-    font-size: 0.9vw;
+    font-size: 1.3vw;
   }
 
   p {
-    font-size: 0.9vw;
+    font-size: 1vw;
   }
 
   li {
-    font-size: 0.9vw;
+    font-size: 1.3vw;
   }
 
   button, .btn-secondary {
     font-size: 1vw;
   }
 }
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
+/*# sourceMappingURL=typographys.css.map */
 
 /*# sourceMappingURL=typographys.css.map */
