--- a/assets/typographys.scss
+++ b/assets/typographys.scss
@@ -8,6 +8,11 @@
   font-family: Roboto, sans-serif;
 
 }
+
+.primary-color {
+  color: $main_color;
+}
+
 .btn-primary {
   background-color: $main_color;
   border-color: $main_color;
@@ -75,9 +80,10 @@ button, .btn-secondary {
   transition: 0.2s;
 
   &:hover {
+    background-color: transparent;
     border-color: $grey-light;
     color: $main_color;
-    background-color: $grey-light;
+
   }
 }
 .btn-secondary:hover {
@@ -167,15 +173,15 @@ button, .btn-secondary {
   }
 
   a {
-    font-size: 0.9vw;
+    font-size: 1.3vw;
   }
 
   p {
-    font-size: 0.9vw;
+    font-size: 1vw;
   }
 
   li {
-    font-size: 0.9vw;
+    font-size: 1.3vw;
   }
 
   button, .btn-secondary {
